# projet_methodes_agregations

./: .gitignore  README.md  code.ipynb  pyproject.toml
data/: test_.csv  test_clean.csv  train_clean.csv
