[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
